--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "documentation",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "url": "https://github.com/mavi-server/mavi"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
